# RegexForge

./: Cargo.toml  README.md
docs/: MoSCoW.md
src-libregexforge/: Cargo.toml  README.md
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs  main.rs
src-ui/: Cargo.toml
src-ui/src/: main.rs
